name:                bbq-sg
version:             0.3.2.0
license:             MIT
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     BBQ.SG,
                       BBQ.SG.Config
  other-modules:       BBQ.SG.Plugin,
                       BBQ.SG.Meta,
                       BBQ.SG.Misc,
                       BBQ.SG.Template,
                       BBQ.SG.Components.HomePage,
                       BBQ.SG.Components.Pages,
                       BBQ.SG.Components.Posts,
                       BBQ.SG.Components.Tags,
                       BBQ.SG.Components.Wiki,
                       BBQ.SG.Tools.AutoKeywords,
                       BBQ.SG.Tools.IO,
                       BBQ.SG.Tools.ModCache,
                       BBQ.SG.Tools.Parser,
                       BBQ.SG.Tools.Synopsis,
                       BBQ.SG.Tools.WordCount
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.9,
                       filepath >=1.4 && <1.5,
                       blaze-html >=0.8 && <0.9,
                       directory >=1.2 && <1.3,
                       unix >=2.7 && <2.8,
                       url >=2.1 && <2.2,
                       text >=1.2 && <1.3,
                       time >=1.5 && <1.6,
                       containers >=0.5 && <0.6,
                       markdown >=0.1 && <0.2,
                       cereal >=0.4 && <0.5,
                       bytestring >=0.10 && <0.11,
                       split >= 0.2.2 && < 0.2.3
  hs-source-dirs:      src
  default-language:    Haskell2010