name:                bbq-sg
version:             0.6.3
license:             MIT
license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  Ghc-Options:         -Wall
  exposed-modules:     BBQ.Task,
                       BBQ.Import,
                       BBQ.Component.Post,
                       BBQ.Component.Index,
                       BBQ.Component.Wiki,
                       BBQ.FTree,
                       BBQ.Config,
                       BBQ.Route

  other-modules:       BBQ.Component.Common

  default-extensions:  TemplateHaskell,
                       QuasiQuotes,
                       OverloadedStrings,
                       RecordWildCards,
                       NoImplicitPrelude,
                       EmptyDataDecls,
                       GADTs,
                       FlexibleContexts,
                       DeriveDataTypeable,
                       GeneralizedNewtypeDeriving,
                       RankNTypes,
                       DeriveGeneric,
                       TypeSynonymInstances,
                       FlexibleInstances

  build-depends:       base >=4.8 && <4.9,
                       template-haskell >=2.10 && <2.11,
                       filepath >=1.4 && <1.5,
                       shakespeare >=2.0 && <2.1,
                       unordered-containers >=0.2 && <0.3,
                       time >=1.5 && <1.6,
                       text,
                       mtl >=2.2 && <2.3,
                       split >=0.2 && <0.3,
                       blaze-html >=0.8 && <0.9,
                       shake,
                       pandoc,
                       iso8601-time,
                       classy-prelude,
                       web-routes,
                       web-routes-th,
                       containers,
                       directory,
                       aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
